@@ -1,0 +1,92 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>texture</key>
+	<dict>
+		<key>width</key>
+		<integer>256</integer>
+		<key>height</key>
+		<integer>128</integer>
+	</dict>
+	<key>frames</key>
+	<dict>
+		<key>grossini_blue_01.png</key>
+		<dict>
+			<key>x</key>
+			<integer>76</integer>
+			<key>y</key>
+			<integer>1</integer>
+			<key>width</key>
+			<integer>51</integer>
+			<key>height</key>
+			<integer>109</integer>
+			<key>offsetX</key>
+			<real>0</real>
+			<key>offsetY</key>
+			<real>-1</real>
+			<key>originalWidth</key>
+			<integer>85</integer>
+			<key>originalHeight</key>
+			<integer>121</integer>
+		</dict>
+		<key>grossini_blue_02.png</key>
+		<dict>
+			<key>x</key>
+			<integer>128</integer>
+			<key>y</key>
+			<integer>1</integer>
+			<key>width</key>
+			<integer>63</integer>
+			<key>height</key>
+			<integer>109</integer>
+			<key>offsetX</key>
+			<real>-6</real>
+			<key>offsetY</key>
+			<real>-1</real>
+			<key>originalWidth</key>
+			<integer>85</integer>
+			<key>originalHeight</key>
+			<integer>121</integer>
+		</dict>
+		<key>grossini_blue_03.png</key>
+		<dict>
+			<key>x</key>
+			<integer>192</integer>
+			<key>y</key>
+			<integer>1</integer>
+			<key>width</key>
+			<integer>63</integer>
+			<key>height</key>
+			<integer>109</integer>
+			<key>offsetX</key>
+			<real>-6</real>
+			<key>offsetY</key>
+			<real>-1</real>
+			<key>originalWidth</key>
+			<integer>85</integer>
+			<key>originalHeight</key>
+			<integer>121</integer>
+		</dict>
+		<key>grossini_blue_04.png</key>
+		<dict>
+			<key>x</key>
+			<integer>1</integer>
+			<key>y</key>
+			<integer>1</integer>
+			<key>width</key>
+			<integer>74</integer>
+			<key>height</key>
+			<integer>109</integer>
+			<key>offsetX</key>
+			<real>-0.5</real>
+			<key>offsetY</key>
+			<real>-1</real>
+			<key>originalWidth</key>
+			<integer>85</integer>
+			<key>originalHeight</key>
+			<integer>121</integer>
+		</dict>
+	</dict>
+</dict>
+</plist>
